Fixed Firefox Cutoff

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -4,6 +4,9 @@
 	font-family: "Junge", Georgia, serif;
 }
 
+html { height: 100%; }
+body { min-height: 100%; height: 100%; }
+
 h1, h2, h5 {
   text-align: center;
   font-family: "Amatic SC", cursive; /* Qwigley, Dancing Script */
