--- a/app/assets/stylesheets/storylines.css.scss
+++ b/app/assets/stylesheets/storylines.css.scss
@@ -331,6 +331,7 @@ svg {
 #viz_wrapper {
   text-align: center;
   margin: auto;
+  height: 100%;
 }
   
 #vis_controls {
